# preview-ocr

./: README.md  main.py  ocr.py  pyproject.toml
