[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.1"
pytesseract = "^0.3.10"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
